[gd_scene load_steps=9 format=2]

[ext_resource path="res://status.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemy1.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 3.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[node name="enemy1" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="cast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 256, 0 )
collision_mask = 7

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="check_inside" type="Area2D" parent="."]
monitorable = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="check_inside"]
shape = SubResource( 5 )

[node name="state_change" type="Timer" parent="."]
autostart = true

[node name="attack_cooldown" type="Timer" parent="."]
autostart = true

[node name="status" parent="." instance=ExtResource( 1 )]
[connection signal="timeout" from="state_change" to="." method="_on_state_change_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
